@@ -470,7 +470,7 @@ DECL_TEMPLATE(darwin, __thread_selfid);         // 372
 #endif
 // 373
 #if DARWIN_VERS >= DARWIN_10_11
-// NYI kevent_qos                               // 374
+DECL_TEMPLATE(darwin, kevent_qos);              // 374
 #endif /* DARWIN_VERS >= DARWIN_10_11 */
 #if DARWIN_VERS >= DARWIN_10_13
 // NYI kevent_id                                // 375
