@@ -77,6 +77,7 @@ where XXXXXX is the bug number as listed below.
 382563  MIPS MSA ASE support
 382998  xml-socket doesn't work
 383275  massif valgrind: m_xarray.c:162 (ensureSpaceXA): Assertion '!xa->arr' failed
+383723  Fix missing kevent_qos syscall (macOS 10.11)
 384096  Mention AddrCheck at Memcheck's command line option --undef-value-errors=no
 384230  vex x86->IR: unhandled instruction bytes: 0x67 0xE8 0xAB 0x68
 384526  reduce number of spill instructions generated by VEX register allocator v3
